--- a/example.html
+++ b/example.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
 <head>
-<meta charset="utf-8">
+  <meta charset="utf-8">
 
-<link href="/static/pkg/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/pkg/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-<style>
+  <style>
 
 
-.background {
-  fill: none;
-  pointer-events: all;
-}
+    .background {
+    fill: none;
+    pointer-events: all;
+    }
 
-#states {
-  fill: #aaa;
-}
+    #states {
+    fill: #aaa;
+    }
 
-#states .active {
-  fill: orange;
-}
+    #states .active {
+    fill: orange;
+    }
 
-#state-borders {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 1.5px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
-}
+    #state-borders {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 1.5px;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    pointer-events: none;
+    }
 
-.container {
-  max-width: none;
-  margin-left: 20px;
-  margin-right: 20px;
-}
+    body .container {
+    max-width: none;
+    margin-left: 20px;
+    margin-right: 20px;
+    }
 
-</style>
+
+    .counties {
+    fill: none;
+    }
+
+    .states {
+    fill: none;
+    stroke: #fff;
+    stroke-linejoin: round;
+    }
+
+    .q0-9 { fill:rgb(247,251,255); }
+    .q1-9 { fill:rgb(222,235,247); }
+    .q2-9 { fill:rgb(198,219,239); }
+    .q3-9 { fill:rgb(158,202,225); }
+    .q4-9 { fill:rgb(107,174,214); }
+    .q5-9 { fill:rgb(66,146,198); }
+    .q6-9 { fill:rgb(33,113,181); }
+    .q7-9 { fill:rgb(8,81,156); }
+    .q8-9 { fill:rgb(8,48,107); }
+
+  </style>
 
 
 </head>
 
 <body>
-
-
 
   <div class="container">
     <h2>Income and Sales Taxes by State</h2>
@@ -54,13 +73,13 @@
 	</div>
       </div>
       
- 
+      
       <!-- right column-->
       <div class="col-lg-4">
         <div class="row text-center">
 	  <div class="btn-group">
-	    <button type="button" class="btn btn-primary active">Income Tax Rate</button>
-	    <button type="button" class="btn btn-primary">Sales Tax Rate</button>
+	    <button type="button" class="btn btn-primary active" data-tax="income">Income Tax Rate</button>
+	    <button type="button" class="btn btn-primary" data-tax="sales">Sales Tax Rate</button>
 	  </div>
         </div>
 	<div class="row">&nbsp;</div>
@@ -72,76 +91,13 @@
   </div>
 
 
+  <script src="./static/pkg/d3/d3.v3.min.js"></script>
+  <script src="./static/pkg/d3/queue.v1.min.js"></script>
+  <script src="./static/pkg/d3/topojson.v1.min.js"></script>
+  <script src="./static/pkg/jquery/jquery-1.10.1.min.js"></script>
 
+  <script src="./static/js/example.js"></script>
 
+</body>
 
-
-
-<script src="/static/pkg/d3/d3.v3.min.js"></script>
-<script src="/static/pkg/d3/topojson.v1.min.js"></script>
-<script>
-
-var width = 960,
-    height = 500,
-    centered;
-
-var projection = d3.geo.albersUsa()
-    .scale(1070)
-    .translate([width / 2, height / 2]);
-
-var path = d3.geo.path()
-    .projection(projection);
-
-var svg = d3.select("#map").append("svg")
-    .attr("width", width)
-    .attr("height", height);
-
-svg.append("rect")
-    .attr("class", "background")
-    .attr("width", width)
-    .attr("height", height)
-    .on("click", clicked);
-
-var g = svg.append("g");
-
-d3.json("/static/json/mbostock-us.json", function(error, us) {
-  g.append("g")
-      .attr("id", "states")
-    .selectAll("path")
-      .data(topojson.feature(us, us.objects.states).features)
-    .enter().append("path")
-      .attr("d", path)
-      .on("click", clicked);
-
-  g.append("path")
-      .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
-      .attr("id", "state-borders")
-      .attr("d", path);
-});
-
-function clicked(d) {
-  var x, y, k;
-
-  if (d && centered !== d) {
-    var centroid = path.centroid(d);
-    x = centroid[0];
-    y = centroid[1];
-    k = 4;
-    centered = d;
-  } else {
-    x = width / 2;
-    y = height / 2;
-    k = 1;
-    centered = null;
-  }
-
-  g.selectAll("path")
-      .classed("active", centered && function(d) { return d === centered; });
-
-  g.transition()
-      .duration(750)
-      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")scale(" + k + ")translate(" + -x + "," + -y + ")")
-      .style("stroke-width", 1.5 / k + "px");
-}
-
-</script>
+</html>
