--- a/example.html
+++ b/example.html
@@ -64,7 +64,7 @@
 <body>
 
   <div class="container">
-    <h2>Income and Sales Taxes by State</h2>
+    <h2>Income Taxes by State by Income Level</h2>
     
     <div class="row">
       <!-- left column -->
@@ -77,9 +77,12 @@
       <!-- right column-->
       <div class="col-lg-4">
         <div class="row text-center">
+	  <h3>Income</h3>
 	  <div class="btn-group">
-	    <button type="button" class="btn btn-primary active" data-tax="income">Income Tax Rate</button>
-	    <button type="button" class="btn btn-primary" data-tax="sales">Sales Tax Rate</button>
+	    <button type="button" class="btn btn-primary active" data-tax="50">$50k</button>
+	    <button type="button" class="btn btn-primary" data-tax="100">$100k</button>
+	    <button type="button" class="btn btn-primary" data-tax="150">$150k</button>
+	    <button type="button" class="btn btn-primary" data-tax="200">$200k</button>
 	  </div>
         </div>
 	<div class="row">&nbsp;</div>
